fix textalign

--- a/src/components/BodyPart/AllDishes/ItemBlock/index.module.scss
+++ b/src/components/BodyPart/AllDishes/ItemBlock/index.module.scss
@@ -17,8 +17,6 @@
 
   position: relative;
 
-  text-align: unset;
-
   transition-property: background-color;
   transition-duration: 0.8s;
   transition-timing-function: ease-out;
@@ -31,6 +29,7 @@
     @include mixins.button;
 
     height: 100%;
+    width: 100%;
 
     padding: 1rem 0.5rem;
 
@@ -58,7 +57,7 @@
       display: flex;
       flex-direction: column;
 
-      text-overflow: ellipsis;
+      text-align: start;
 
       & > .title {
         margin-bottom: 0.5rem;
